tests/snapshots/parse_compound__snapshot_message_journey.snap
---
source: tests/parse_compound.rs
expression: ast
---
Compound:
  clause:
    MessageJourney:
      trace_id: abc123def456
  robot_scope: ~
  time_range: ~
  time_basis: ~
  conditions: ~
  facet: ~
  order_by: ~
  limit: ~
  offset: ~
  output_format: ~
  baseline: ~
