tests/snapshots/parse_compound__snapshot_message_paths.snap
---
source: tests/parse_compound.rs
expression: ast
---
Compound:
  clause:
    MessagePaths:
      topic: /cmd_vel
  robot_scope: ~
  time_range:
    Since:
      Relative:
        amount: 1
        unit: hour
  time_basis: ~
  conditions: ~
  facet: ~
  order_by: ~
  limit: ~
  output_format: ~
  baseline: ~
