tests/snapshots/parse_compound__snapshot_path_deviation_for_trace.snap
---
source: tests/parse_compound.rs
expression: ast
---
Compound:
  clause:
    PathDeviation:
      target:
        Trace: abc123
      plan_index: ~
  scope: ~
  time_range: ~
  time_basis: ~
  conditions: ~
  facet: ~
  order_by: ~
  limit: ~
  offset: ~
  output_format: ~
  baseline: ~
