tests/snapshots/parse_compound__snapshot_path_deviation_plan_negative.snap
---
source: tests/parse_compound.rs
expression: ast
---
Compound:
  clause:
    PathDeviation:
      target:
        Trace: abc
      plan_index: -1
  scope: ~
  time_range: ~
  time_basis: ~
  conditions: ~
  facet: ~
  order_by: ~
  limit: ~
  offset: ~
  output_format: ~
  baseline: ~
